Fixed ContinousIntegration.yml. Hopefully...

--- a/.github/workflows/ContinousIntegration.yml
+++ b/.github/workflows/ContinousIntegration.yml
@@ -21,8 +21,8 @@ jobs:
           mkdir lib
           
           # The following adds the needed libraries.
-          curl https://repo1.maven.org/maven2/javax/servlet/javax.servlet-api/3.0.1/javax.servlet-api-3.0.1.jar
-          curl https://repo1.maven.org/maven2/org/jfree/jcommon/1.0.17/jcommon-1.0.17.jar
+          curl https://repo1.maven.org/maven2/javax/servlet/javax.servlet-api/3.0.1/javax.servlet-api-3.0.1.jar -o lib/javax.servlet-api-3.0.1.jar
+          curl https://repo1.maven.org/maven2/org/jfree/jcommon/1.0.17/jcommon-1.0.17.jar -o lib/jcommon-1.0.17.jar
           
           # From my understanding, this runs the "source code". So we need both DataUtilities and Range.
           javac -d bin/ src/org/jfree/data/DataUtilities.java
