--- a/.github/workflows/ContinousIntegration.yml
+++ b/.github/workflows/ContinousIntegration.yml
@@ -33,12 +33,12 @@ jobs:
           # Notes:
           # From the activity, I used the one with this part added: "$(find src/ -name "*.java")" because we have many classes that we are finding (DataUtilities and Range - they also reference/import the other classes).
           # I added the "-cp lib/jcommon-1.0.17.jar;lib/javax.servlet-api-3.0.1.jar" because when compiling, we also need to consider the "extenal jar's" required to run JFreeChart. Furthermore, another reason is that it is not in the src folder, while they are referenced by the classes (an external jar).
-          javac -d bin -cp lib/jcommon-1.0.17.jar;lib/javax.servlet-api-3.0.1.jar $(find src -name "*.java")
+          javac -d bin -cp lib/jcommon-1.0.17.jar:lib/javax.servlet-api-3.0.1.jar $(find src -name "*.java")
 
           # This compiles our test files.
           # Similarly to the compilation of our source files, we are both using the one with "$(find src/ -name "*.java")" and added "lib/jcommon-1.0.17.jar;lib/javax.servlet-api-3.0.1.jar". They are for the same reason as above. Again, they were from the activity document given to us.
-          javac -d bin -cp bin;lib/jcommon-1.0.17.jar;lib/javax.servlet-api-3.0.1.jar;lib/junit-platform-console-standalone-1.11.4.jar $(find test -name "*.java")
+          javac -d bin -cp bin:lib/jcommon-1.0.17.jar:lib/javax.servlet-api-3.0.1.jar:lib/junit-platform-console-standalone-1.11.4.jar $(find test -name "*.java")
 
           # This runs our test files - Given from the activity file.
           # Note: For some reason, just having "bin" wouldn't work. Due to this, similarly to both compiling the test and source files, I had to reference the external jars/libraries we used.
-          java -jar lib/junit-platform-console-standalone-1.11.4.jar --class-path bin;lib/jcommon-1.0.17.jar;lib/javax.servlet-api-3.0.1.jar --scan-class-path
+          java -jar lib/junit-platform-console-standalone-1.11.4.jar --class-path bin:lib/jcommon-1.0.17.jar:lib/javax.servlet-api-3.0.1.jar --scan-class-path
